--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,13 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.8",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^5.1.11",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "numeral": "^2.0.6",
@@ -25,6 +30,9 @@
     "react-hook-form": "^7.54.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sass": "^1.83.0",
+    "viem": "^2.21.55",
+    "wagmi": "^2.14.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
